# crypto_oracle

./: .gitignore  pyproject.toml
src/: main.py
src/data/: data_cleaning.py  data_preparation.py  feature_engineering.py
src/data/model_save/: cnn_lstm.keras
src/data_processing/: data_cleaning.py  data_preparation.py  feature_engineering.py
src/io_models/: inputs.py  outputs.py
src/models/: cnn_lstm_model.py  lstnet_model.py  predict.py  tcn_model.py  train.py
src/utils/: project_functions.py
tests/: __init__.py  test_core.py
tests/data/model_save/: cnn_lstm.keras
tests/data/processed/: Boruta_data.csv  Boruta_data.parquet  cleaned_data.csv  cleaned_data.parquet  split_data.pkl
tests/data/raw/: bitcoin_data.csv  entity-adjusted-sopr.parquet  price-ohlc.parquet
